prevent preload img jumping 3

--- a/boutique/static/boutique/css/custom.scss
+++ b/boutique/static/boutique/css/custom.scss
@@ -164,7 +164,7 @@ footer {
 
 // images
 .loading {
-  background: transparent url('../img/img-placeholder.gif') center no-repeat;
+  background: transparent url('../img/img-placeholder-sm.gif') center no-repeat;
 }
 
 .dim-img-70 {
